--- a/views/results.erb
+++ b/views/results.erb
@@ -1,10 +1,16 @@
+
 <div class="row">
     <br />
     <div class="span8 offset2">
       <div class="page-header">
         <h3>Results for given register numbers</h3>
       </div>
-      <legend><strong><%= @start %></strong> to <strong><%= @end %></strong></legend>
+      <legend><strong><%= @start %></strong> to <strong><%= @end %></strong>&nbsp;&nbsp;&nbsp;&nbsp;
+        <div class="btn-group hidden ">
+          <a href="/" class="btn btn-small">Back to home </a>
+          <a href="/download_xls" class="btn btn-small">Download Results (.xls) </a>
+        </div>
+      </legend>
       <% @results.each do |reg,res| %>
         <div class="result">
           <table class="table table-condensed table-hover table-bordered">
@@ -36,5 +42,5 @@
       <%end%>
     </div>
     <br>
-    <a href="/" class="btn">Back to home </a>
+
 </div>
