--- a/views/schools9_details.erb
+++ b/views/schools9_details.erb
@@ -6,7 +6,7 @@
     </div>
 
     <legend>Please provide required details</legend>
-    <form class="form-horizontal" action="/schools9_scrape" method="POST">
+    <form class="form-horizontal" action="/wait" method="POST">
       <div class="control-group">
         <label class="control-label">Results URL</label>
         <div class="controls">
