redirect to results added

--- a/views/wait.erb
+++ b/views/wait.erb
@@ -20,6 +20,8 @@
     <h6>Please wait...</h6>
     <br/>
     <div class="loading"></div>
+    <br />
+    <p>If you donot get redirected to results page after 10 minutes, <a href="/results">please click here...</a></p>
   </div>
 </div>
 <div style="display:none" id="url">
