added support for chennai education; added about page

--- a/views/index.erb
+++ b/views/index.erb
@@ -10,7 +10,8 @@
           <select name="site" class="select">
             <option value="schools9">Schools9.com</option>
             <option value="annauniv">annauniv.edu</option>
-          </select> 
+            <option value="chennaieducation">results.chennaieducation.net</option>
+          </select>
           <button type="submit" value="Go!" class="btn btn-primary" >Go!</button>
         </form>
       </div>
