--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,9 +12,12 @@
       <div class="navbar-inner">
         <div class="container">
 
-            <a class="brand" href="#">
+            <a class="brand" href="/">
               Anna Uni Results Scraper
             </a>
+            <ul class="nav">
+              <li class="active"><a href="/about">About</a></li>
+            </ul>
 
         </div>
       </div>
