--- a/views/results.erb
+++ b/views/results.erb
@@ -5,7 +5,7 @@
       <div class="page-header">
         <h3>Results for given register numbers</h3>
       </div>
-      <legend><strong><%= @start %></strong> to <strong><%= @end %></strong>&nbsp;&nbsp;&nbsp;&nbsp;
+      <legend><strong><%= @results.keys.first %></strong> to <strong><%= @results.keys.last %></strong>&nbsp;&nbsp;&nbsp;&nbsp;
         <div class="btn-group hidden ">
           <a href="/" class="btn btn-small">Back to home </a>
           <a href="/download_xls" class="btn btn-small">Download Results (.xls) </a>
