--- a/views/chennai_edu_details.erb
+++ b/views/chennai_edu_details.erb
@@ -2,16 +2,17 @@
   <br />
   <div class="span8 offset2">
     <div class="page-header">
-      <h3>Scrape from Schools9.com</h3>
+      <h3>Scrape from Results.chennaieducation.net</h3>
     </div>
 
     <legend>Please provide required details</legend>
     <form class="form-horizontal" action="/wait" method="POST">
-      <input type="hidden" value="schools9" />
+      <input type="hidden" value="chennai_edu" name="site" />
       <div class="control-group">
         <label class="control-label">Results URL</label>
         <div class="controls">
           <input type="text" class="input" name="url" placeholder="Enter URL" />
+          <p class="help-block">Provide the URL of the page you get when you enter a roll no and obtain result at results.chennaieducation.net</p>
         </div>
       </div>
       <hr />
