--- a/views/schools9_details.erb
+++ b/views/schools9_details.erb
@@ -7,6 +7,7 @@
 
     <legend>Please provide required details</legend>
     <form class="form-horizontal" action="/wait" method="POST">
+      <input type="hidden" value="schools9" name="site" />
       <div class="control-group">
         <label class="control-label">Results URL</label>
         <div class="controls">
