--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,7 +16,7 @@
               Anna Uni Results Scraper
             </a>
             <ul class="nav">
-              <li class="active"><a href="/about">About</a></li>
+              <li><a href="/about">About</a></li>
             </ul>
 
         </div>
