--- a/views/wait.erb
+++ b/views/wait.erb
@@ -11,7 +11,7 @@
       var url=$('#url').html();
       $.get( url, function(data) {
         obj=JSON.parse(data);
-        alert(obj.count);
+        alert(obj.count+ " Results were successfully scraped!");
         window.location.replace("/results");
       });
    });
