--- a/views/wait.erb
+++ b/views/wait.erb
@@ -8,7 +8,7 @@
       setTimeout(function(){
         $('#redirect').html('If you donot get redirected to results page <a href="/results">please click here...</a>');
         },300000);
-      var url=$('#url').html();
+      var url=$('#url').text();
       $.get( url, function(data) {
         obj=JSON.parse(data);
         alert(obj.count+ " Results were successfully scraped!");
